# waspy

./: .gitignore  README.md  aggregator.py  comm.py  config.py  config.toml  data_dump.py  experiment_001.json  experiment_channeling.json  experiment_random.json  hive.py  hive_exception.py  home_config.toml  install.sh  lab_config.toml  mca_dash.py  pymsteamstest.py  rbs.py  recipe.csv  requirements.txt  run.bat  run.sh  run_local.sh  setup.py  tox.ini
app/config/: config.py  home_setup.py  lab_setup.py
app/erd/: data_serializer.py  entities.py  erd_csv_to_json.py  erd_hardware.py  erd_run_standalone.py  erd_runner.py  erd_setup.py  recipe_list_runner.py
app/hardware_controllers/: blueprints.py  comm.py  daemon_comm.py  data_dump.py  entities.py  http_helper.py  hw_action.py  hw_control.py  router.py
app/http_routes/: async_http_helper.py  erd_routes.py  http_helper.py  hw_control_routes.py  rbs_routes.py  systemd_routes.py  trend_routes.py
app/rbs/: data_serializer.py  entities.py  rbs_runner.py  rbs_setup.py  (+2 more)
idf/: IAEA25_NDF.xml  IDFunitsv1_02.xsd  caen-xml.py  idfv1_02.xsd  tmp.txt  validate.sh
lib/drivers/: setup.cfg
lib/drivers/tests/: test_aml.py  test_motrona_dx350.py
lib/drivers/waspy/drivers/: aml_smd2.py  caen.py  driver_error.py  fastcom_mpa3.py  http_helper.py  ims_mdrive.py  motrona_dx350.py
lib/hardware_control/: setup.cfg
lib/hardware_control/hive/hardware_control/: data_serializer.py  erd_entities.py  erd_setup.py  http_helper.py  hw_action.py  hw_entities.py  plot.py  rbs_entities.py  rbs_setup.py
lib/hardware_control/tests/: test_motrona_dx350.py
lib/hardware_control/waspy/hardware_control/: aml.py  data_serializer.py  erd_entities.py  erd_setup.py  hive_exception.py  http_helper.py  hw_action.py  motrona_dx350.py  plot.py  rbs_entities.py  rbs_setup.py
lib/iba/: setup.cfg
lib/iba/tests/: test_aml.py  test_fit.py  test_graph_group.py  test_preemptive.py  test_rbs_recipe.py  test_recipes.py
lib/iba/waspy/iba/: erd_data_serializer.py  erd_entities.py  erd_plot.py  erd_recipes.py  erd_setup.py  file_handler.py  file_writer.py  iba_error.py  plot.py  preempt.py  rbs_data_serializer.py  rbs_entities.py  rbs_plot.py  rbs_recipes.py  rbs_setup.py  rbs_yield_angle_fit.py
lib/iba/waspy/tests/: example.py  test_rbs_recipe.py
lib/restapi/: setup.cfg
lib/restapi/hive/restapi/: router_builder.py
lib/restapi/waspy/restapi/: router_builder.py
projects/hive/: default_config.toml  hive.service  lab_config.toml  requirements.txt  run_hive.sh  run_hive_local.sh  setup.cfg  vdg_lab_config.toml
projects/hive/hive/: config.py  entities.py  erd_csv_to_json.py  erd_data_serializer.py  erd_entities.py  erd_job.py  erd_routes.py  hw_control_routes.py  job_factory.py  rbs_csv_to_json.py  rbs_data_serializer.py  rbs_entities.py  rbs_job.py  rbs_routes.py  service_mill.py
projects/hive/job_templates/: erd_template.json  rbs_channeling_template.csv  rbs_mixed_recipe.csv  rbs_mixed_template.json  rbs_random_template.csv
projects/hive/src/hive/: config.py  erd_csv_to_json.py  erd_data_serializer.py  erd_entities.py  erd_job.py  erd_routes.py  hw_control_routes.py  job.py  job_factory.py  job_routes.py  job_runner.py  logbook_db.py  main.py  rbs_csv_to_json.py  rbs_data_serializer.py  rbs_entities.py  rbs_job.py  rbs_routes.py  systemd_routes.py
projects/hive/tests/: test_rbs_job.py
projects/logbook/: hive.db  hive_imec_schema.db  hive_schema.db  hive_vdg_schema.db  logbook.py  logbook.service  requirements.txt  routes.py  run.sh  run_logbook.sh  setup.cfg  tox.ini
projects/logbook/logbook/: entities.py  logbook.py  routes.py  sqlite_db.py
projects/logbook/src/logbook/: db_orm.py  entities.py  main.py  make_db.py  routes.py  sqlite_db.py
projects/logbook/tests/: test.db  test_log_book.py
projects/ruthelde/: run_ruthelde.sh  ruthelde.service  setup.cfg
projects/ruthelde/src/ruthelde/: main.py
projects/trend/: config.toml  config_fake.toml  requirements.txt  run_trend.py  run_trend.sh  setup.cfg  trend.service  trends.txt
projects/trend/src/trend/: main.py
projects/trend/trend/: run_trend.py
rqm_examples/: .~lock.recipe_list.csv#  experiment_random.json  out.json  recipe_list.csv
rqm_templates/: template_random.csv
scripts/: aml_speed_test.py
service/: aml_det_theta.service  aml_phi_zeta.service  aml_x_y.service  hive.service  motrona.service  systemd-networkd-wait-eth1.service  wait_eth_up.service
static/: aml.js  aml_max.js  caen.js  caen_max.js  daemon_connection.js  dashboard.js  itf.js  max_aml.js  max_caen.js  max_motrona.js  min_itf.js  rbs.js  rbs_hw.js  sidebar.css  styles.css
templates/: aml_max.html  aml_x_y.html  base.html  base.jinja2  caen.html  caen_max.html  dashboard.html  dashboard.jinja2  dashboard_v2.html  det01_theta.html  flask_example.html  hw_ui.html  hw_ui.jinja2  line_chart.html  max_aml.html  max_aml.jinja2  max_caen.html  max_caen.jinja2  max_motrona.html  max_motrona.jinja2  min_itf.html  phi_zeta.html  post_example.html  rbs.html  rbs.jinja2  rbs_hw.html  rbs_hw.jinja2  ui_elements.html  ui_elements.jinja2  welcome.html
tests/: sample_data_01.txt  test_daemon_control.py  test_fitter.py  test_plotting.py  test_rbs_config.py  test_rbs_daemon_control.py
(+792 files in other folders)
