[metadata]
name = waspy_drivers
version = 0.0.1
author = Michiel Jordens
author_email = michiel.jordens@imec.be
description = Abstracts the hardware drivers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/micjo/waspy
project_urls =
    Bug Tracker = https://github.com/micjo/waspy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent