[metadata]
name = hive_hardware_control
version = 0.0.1
author = Michiel Jordens
author_email = michiel.jordens@imec.be
description = Abstracts the hardware
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.imec.be/MCA-IBA/wasp-hive
project_urls =
    Bug Tracker = https://github.imec.be/MCA-IBA/wasp-hive/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .