[metadata]
name = hive_restapi
version = 0.0.1
author = Michiel Jordens
author_email = michiel.jordens@imec.be
description = Abstracts the creation of the restapi backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.imec.be/MCA-IBA/wasp-hive
project_urls =
    Bug Tracker = https://github.imec.be/MCA-IBA/wasp-hive/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = hive
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hive