[metadata]
name = waspy_restapi
version = 0.0.1
author = Michiel Jordens
author_email = michiel.jordens@imec.be
description = Abstracts the creation of the restapi backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/micjo/waspy
project_urls =
    Bug Tracker = https://github.com/micjo/waspy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
    fastapi==0.73.0
    starlette==0.17.1
    uvicorn