[metadata]
name = waspy_ruthelde
version = 0.0.1
author = Michiel Jordens
author_email = michiel.jordens@imec.be
description = Ruthelde automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.imec.be/MCA-IBA/waspy
project_urls =
    Bug Tracker = https://github.imec.be/MCA-IBA/waspy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
